packages/agent_dart/macos/Classes/frb.h

typedef struct wire_uint_8_list {
  uint8_t *ptr;
  int32_t len;
} wire_uint_8_list;
typedef struct wire_P256SignWithSeedReq {
  struct wire_uint_8_list *msg;
  struct wire_uint_8_list *seed;
} wire_P256SignWithSeedReq;
typedef struct wire_P256VerifyReq {
  struct wire_uint_8_list *message_hash;
  struct wire_uint_8_list *signature_bytes;
  struct wire_uint_8_list *public_key_bytes;
} wire_P256VerifyReq;
typedef struct wire_P256ShareSecretReq {
  struct wire_uint_8_list *seed;
  struct wire_uint_8_list *public_key_raw_bytes;
} wire_P256ShareSecretReq;
typedef struct wire_SchnorrFromSeedReq {
  struct wire_uint_8_list *seed;
} wire_SchnorrFromSeedReq;
typedef struct wire_SchnorrSignWithSeedReq {
  struct wire_uint_8_list *msg;
  struct wire_uint_8_list *seed;
  struct wire_uint_8_list *aux_rand;
} wire_SchnorrSignWithSeedReq;
typedef struct wire_SchnorrVerifyReq {
  struct wire_uint_8_list *message_hash;
  struct wire_uint_8_list *signature_bytes;
  struct wire_uint_8_list *public_key_bytes;
} wire_SchnorrVerifyReq;
typedef struct wire_AesEncryptReq {
  struct wire_uint_8_list *key;
  struct wire_uint_8_list *iv;
  struct wire_uint_8_list *message;
} wire_AesEncryptReq;
typedef struct wire_AesDecryptReq {
  struct wire_uint_8_list *key;
  struct wire_uint_8_list *iv;
  struct wire_uint_8_list *cipher_text;
} wire_AesDecryptReq;
typedef struct wire_PBKDFDeriveReq {
  struct wire_uint_8_list *password;
  struct wire_uint_8_list *salt;
  uint32_t c;
} wire_PBKDFDeriveReq;
typedef struct wire_ScriptDeriveReq {
  struct wire_uint_8_list *password;
  struct wire_uint_8_list *salt;
  uint32_t n;
  uint32_t p;
  uint32_t r;
} wire_ScriptDeriveReq;
typedef struct wire_PsbtToTxidReq {
  struct wire_uint_8_list *psbt_str;
} wire_PsbtToTxidReq;
typedef struct wire_PsbtToTxReq {
  struct wire_uint_8_list *psbt_str;
} wire_PsbtToTxReq;
typedef struct wire_PsbtFreeRateReq {
  struct wire_uint_8_list *psbt_str;
} wire_PsbtFreeRateReq;
typedef struct wire_PsbtFreeAmountReq {
  struct wire_uint_8_list *psbt_str;
} wire_PsbtFreeAmountReq;
typedef struct wire_PsbtCombineReq {
  struct wire_uint_8_list *psbt_str;
  struct wire_uint_8_list *other;
} wire_PsbtCombineReq;
typedef struct wire_GetAddressReq {
  struct wire_uint_8_list *public_key;
  struct wire_uint_8_list *network;
} wire_GetAddressReq;
typedef struct wire_PsbtWalletReq {
  struct wire_uint_8_list *prv;
  struct wire_uint_8_list *address_type;
  struct wire_uint_8_list *network;
} wire_PsbtWalletReq;
typedef struct wire_list_script_amount {
  struct wire_ScriptAmount *ptr;
  int32_t len;
} wire_list_script_amount;
typedef struct wire_list_out_point {
  struct wire_OutPoint *ptr;
  int32_t len;
} wire_list_out_point;
typedef struct wire_TxBulderReq {
  struct wire_PsbtWalletReq wallet_req;
  struct wire_list_script_amount *recipients;
  struct wire_list_out_point *utxos;
  struct wire_list_out_point *unspendable;
  bool manually_selected_only;
  bool only_spend_change;
  bool do_not_spend_change;
  float *fee_rate;
  uint64_t *fee_absolute;
  bool drain_wallet;
  struct wire_uint_8_list *drain_to;
  bool enable_rbf;
  uint32_t *n_sequence;
  struct wire_uint_8_list *data;
} wire_TxBulderReq;
typedef union AddressIndexKind {
  struct wire_AddressIndex_New *New;
  struct wire_AddressIndex_LastUnused *LastUnused;
  struct wire_AddressIndex_Peek *Peek;
} AddressIndexKind;
typedef struct wire_AddressIndex {
  int32_t tag;
  union AddressIndexKind *kind;
} wire_AddressIndex;
void wire_p256_sign(int64_t port_, struct wire_P256SignWithSeedReq *req);
void wire_p256_verify(int64_t port_, struct wire_P256VerifyReq *req);
void wire_p256_get_shared_secret(int64_t port_, struct wire_P256ShareSecretReq *req);
void wire_schnorr_from_seed(int64_t port_, struct wire_SchnorrFromSeedReq *req);
void wire_schnorr_sign(int64_t port_, struct wire_SchnorrSignWithSeedReq *req);
void wire_schnorr_verify(int64_t port_, struct wire_SchnorrVerifyReq *req);
void wire_aes_128_ctr_encrypt(int64_t port_, struct wire_AesEncryptReq *req);
void wire_aes_128_ctr_decrypt(int64_t port_, struct wire_AesDecryptReq *req);
void wire_aes_256_cbc_encrypt(int64_t port_, struct wire_AesEncryptReq *req);
void wire_aes_256_cbc_decrypt(int64_t port_, struct wire_AesDecryptReq *req);
void wire_aes_256_gcm_encrypt(int64_t port_, struct wire_AesEncryptReq *req);
void wire_aes_256_gcm_decrypt(int64_t port_, struct wire_AesDecryptReq *req);
void wire_pbkdf2_derive_key(int64_t port_, struct wire_PBKDFDeriveReq *req);
void wire_scrypt_derive_key(int64_t port_, struct wire_ScriptDeriveReq *req);
void wire_new_transaction(int64_t port_, struct wire_uint_8_list *tx);
void wire_psbt_to_txid(int64_t port_, struct wire_PsbtToTxidReq *req);
void wire_psbt_extract_tx(int64_t port_, struct wire_PsbtToTxReq *req);
void wire_psbt_get_fee_rate(int64_t port_, struct wire_PsbtFreeRateReq *req);
void wire_psbt_get_fee_amount(int64_t port_, struct wire_PsbtFreeAmountReq *req);
void wire_psbt_combine_psbt(int64_t port_, struct wire_PsbtCombineReq *req);
void wire_psbt_get_address(int64_t port_, struct wire_GetAddressReq *req);
void wire_psbt_tx_builder_finish(int64_t port_, struct wire_TxBulderReq *req);
void wire_psbt_wallet_get_address(int64_t port_,
                                  struct wire_PsbtWalletReq *wallet,
                                  struct wire_AddressIndex *address_index);
void wire_psbt_wallet_internalized_address(int64_t port_,
                                           struct wire_PsbtWalletReq *wallet,
                                           struct wire_AddressIndex *address_index);
void wire_psbt_wallet_sign(int64_t port_,
                           struct wire_PsbtWalletReq *wallet,
                           struct wire_uint_8_list *psbt,
                           bool is_multi_sig);