packages/agent_dart_ffi/lib/src/bridge_generated.io.dart


  void wire_p256_sign(
    int port_,
    ffi.Pointer<wire_P256SignWithSeedReq> req,
  ) {
    return _wire_p256_sign(
      port_,
      req,
    );
  }

  late final _wire_p256_signPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_P256SignWithSeedReq>)>>('wire_p256_sign');
  late final _wire_p256_sign = _wire_p256_signPtr.asFunction<void Function(int, ffi.Pointer<wire_P256SignWithSeedReq>)>();

  void wire_p256_verify(
    int port_,
    ffi.Pointer<wire_P256VerifyReq> req,
  ) {
    return _wire_p256_verify(
      port_,
      req,
    );
  }

  late final _wire_p256_verifyPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_P256VerifyReq>)>>('wire_p256_verify');
  late final _wire_p256_verify = _wire_p256_verifyPtr.asFunction<void Function(int, ffi.Pointer<wire_P256VerifyReq>)>();

  void wire_p256_get_shared_secret(
    int port_,
    ffi.Pointer<wire_P256ShareSecretReq> req,
  ) {
    return _wire_p256_get_shared_secret(
      port_,
      req,
    );
  }

  late final _wire_p256_get_shared_secretPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_P256ShareSecretReq>)>>('wire_p256_get_shared_secret');
  late final _wire_p256_get_shared_secret = _wire_p256_get_shared_secretPtr.asFunction<void Function(int, ffi.Pointer<wire_P256ShareSecretReq>)>();

  void wire_schnorr_from_seed(
    int port_,
    ffi.Pointer<wire_SchnorrFromSeedReq> req,
  ) {
    return _wire_schnorr_from_seed(
      port_,
      req,
    );
  }

  late final _wire_schnorr_from_seedPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_SchnorrFromSeedReq>)>>('wire_schnorr_from_seed');
  late final _wire_schnorr_from_seed = _wire_schnorr_from_seedPtr.asFunction<void Function(int, ffi.Pointer<wire_SchnorrFromSeedReq>)>();

  void wire_schnorr_sign(
    int port_,
    ffi.Pointer<wire_SchnorrSignWithSeedReq> req,
  ) {
    return _wire_schnorr_sign(
      port_,
      req,
    );
  }

  late final _wire_schnorr_signPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_SchnorrSignWithSeedReq>)>>('wire_schnorr_sign');
  late final _wire_schnorr_sign = _wire_schnorr_signPtr.asFunction<void Function(int, ffi.Pointer<wire_SchnorrSignWithSeedReq>)>();

  void wire_schnorr_verify(
    int port_,
    ffi.Pointer<wire_SchnorrVerifyReq> req,
  ) {
    return _wire_schnorr_verify(
      port_,
      req,
    );
  }

  late final _wire_schnorr_verifyPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_SchnorrVerifyReq>)>>('wire_schnorr_verify');
  late final _wire_schnorr_verify = _wire_schnorr_verifyPtr.asFunction<void Function(int, ffi.Pointer<wire_SchnorrVerifyReq>)>();

  void wire_aes_128_ctr_encrypt(
    int port_,
    ffi.Pointer<wire_AesEncryptReq> req,
  ) {
    return _wire_aes_128_ctr_encrypt(
      port_,
      req,
    );
  }

  late final _wire_aes_128_ctr_encryptPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_AesEncryptReq>)>>('wire_aes_128_ctr_encrypt');
  late final _wire_aes_128_ctr_encrypt = _wire_aes_128_ctr_encryptPtr.asFunction<void Function(int, ffi.Pointer<wire_AesEncryptReq>)>();

  void wire_aes_128_ctr_decrypt(
    int port_,
    ffi.Pointer<wire_AesDecryptReq> req,
  ) {
    return _wire_aes_128_ctr_decrypt(
      port_,
      req,
    );
  }

  late final _wire_aes_128_ctr_decryptPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_AesDecryptReq>)>>('wire_aes_128_ctr_decrypt');
  late final _wire_aes_128_ctr_decrypt = _wire_aes_128_ctr_decryptPtr.asFunction<void Function(int, ffi.Pointer<wire_AesDecryptReq>)>();

  void wire_aes_256_cbc_encrypt(
    int port_,
    ffi.Pointer<wire_AesEncryptReq> req,
  ) {
    return _wire_aes_256_cbc_encrypt(
      port_,
      req,
    );
  }

  late final _wire_aes_256_cbc_encryptPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_AesEncryptReq>)>>('wire_aes_256_cbc_encrypt');
  late final _wire_aes_256_cbc_encrypt = _wire_aes_256_cbc_encryptPtr.asFunction<void Function(int, ffi.Pointer<wire_AesEncryptReq>)>();

  void wire_aes_256_cbc_decrypt(
    int port_,
    ffi.Pointer<wire_AesDecryptReq> req,
  ) {
    return _wire_aes_256_cbc_decrypt(
      port_,
      req,
    );
  }

  late final _wire_aes_256_cbc_decryptPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_AesDecryptReq>)>>('wire_aes_256_cbc_decrypt');
  late final _wire_aes_256_cbc_decrypt = _wire_aes_256_cbc_decryptPtr.asFunction<void Function(int, ffi.Pointer<wire_AesDecryptReq>)>();

  void wire_aes_256_gcm_encrypt(
    int port_,
    ffi.Pointer<wire_AesEncryptReq> req,
  ) {
    return _wire_aes_256_gcm_encrypt(
      port_,
      req,
    );
  }

  late final _wire_aes_256_gcm_encryptPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_AesEncryptReq>)>>('wire_aes_256_gcm_encrypt');
  late final _wire_aes_256_gcm_encrypt = _wire_aes_256_gcm_encryptPtr.asFunction<void Function(int, ffi.Pointer<wire_AesEncryptReq>)>();

  void wire_aes_256_gcm_decrypt(
    int port_,
    ffi.Pointer<wire_AesDecryptReq> req,
  ) {
    return _wire_aes_256_gcm_decrypt(
      port_,
      req,
    );
  }

  late final _wire_aes_256_gcm_decryptPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_AesDecryptReq>)>>('wire_aes_256_gcm_decrypt');
  late final _wire_aes_256_gcm_decrypt = _wire_aes_256_gcm_decryptPtr.asFunction<void Function(int, ffi.Pointer<wire_AesDecryptReq>)>();

  void wire_pbkdf2_derive_key(
    int port_,
    ffi.Pointer<wire_PBKDFDeriveReq> req,
  ) {
    return _wire_pbkdf2_derive_key(
      port_,
      req,
    );
  }

  late final _wire_pbkdf2_derive_keyPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_PBKDFDeriveReq>)>>('wire_pbkdf2_derive_key');
  late final _wire_pbkdf2_derive_key = _wire_pbkdf2_derive_keyPtr.asFunction<void Function(int, ffi.Pointer<wire_PBKDFDeriveReq>)>();

  void wire_scrypt_derive_key(
    int port_,
    ffi.Pointer<wire_ScriptDeriveReq> req,
  ) {
    return _wire_scrypt_derive_key(
      port_,
      req,
    );
  }

  late final _wire_scrypt_derive_keyPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_ScriptDeriveReq>)>>('wire_scrypt_derive_key');
  late final _wire_scrypt_derive_key = _wire_scrypt_derive_keyPtr.asFunction<void Function(int, ffi.Pointer<wire_ScriptDeriveReq>)>();

  void wire_new_transaction(
    int port_,
    ffi.Pointer<wire_uint_8_list> tx,
  ) {
    return _wire_new_transaction(
      port_,
      tx,
    );
  }

  late final _wire_new_transactionPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_uint_8_list>)>>('wire_new_transaction');
  late final _wire_new_transaction = _wire_new_transactionPtr.asFunction<void Function(int, ffi.Pointer<wire_uint_8_list>)>();

  void wire_psbt_to_txid(
    int port_,
    ffi.Pointer<wire_PsbtToTxidReq> req,
  ) {
    return _wire_psbt_to_txid(
      port_,
      req,
    );
  }

  late final _wire_psbt_to_txidPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_PsbtToTxidReq>)>>('wire_psbt_to_txid');
  late final _wire_psbt_to_txid = _wire_psbt_to_txidPtr.asFunction<void Function(int, ffi.Pointer<wire_PsbtToTxidReq>)>();

  void wire_psbt_extract_tx(
    int port_,
    ffi.Pointer<wire_PsbtToTxReq> req,
  ) {
    return _wire_psbt_extract_tx(
      port_,
      req,
    );
  }

  late final _wire_psbt_extract_txPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_PsbtToTxReq>)>>('wire_psbt_extract_tx');
  late final _wire_psbt_extract_tx = _wire_psbt_extract_txPtr.asFunction<void Function(int, ffi.Pointer<wire_PsbtToTxReq>)>();

  void wire_psbt_get_fee_rate(
    int port_,
    ffi.Pointer<wire_PsbtFreeRateReq> req,
  ) {
    return _wire_psbt_get_fee_rate(
      port_,
      req,
    );
  }

  late final _wire_psbt_get_fee_ratePtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_PsbtFreeRateReq>)>>('wire_psbt_get_fee_rate');
  late final _wire_psbt_get_fee_rate = _wire_psbt_get_fee_ratePtr.asFunction<void Function(int, ffi.Pointer<wire_PsbtFreeRateReq>)>();

  void wire_psbt_get_fee_amount(
    int port_,
    ffi.Pointer<wire_PsbtFreeAmountReq> req,
  ) {
    return _wire_psbt_get_fee_amount(
      port_,
      req,
    );
  }

  late final _wire_psbt_get_fee_amountPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_PsbtFreeAmountReq>)>>('wire_psbt_get_fee_amount');
  late final _wire_psbt_get_fee_amount = _wire_psbt_get_fee_amountPtr.asFunction<void Function(int, ffi.Pointer<wire_PsbtFreeAmountReq>)>();

  void wire_psbt_combine_psbt(
    int port_,
    ffi.Pointer<wire_PsbtCombineReq> req,
  ) {
    return _wire_psbt_combine_psbt(
      port_,
      req,
    );
  }

  late final _wire_psbt_combine_psbtPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_PsbtCombineReq>)>>('wire_psbt_combine_psbt');
  late final _wire_psbt_combine_psbt = _wire_psbt_combine_psbtPtr.asFunction<void Function(int, ffi.Pointer<wire_PsbtCombineReq>)>();

  void wire_psbt_get_address(
    int port_,
    ffi.Pointer<wire_GetAddressReq> req,
  ) {
    return _wire_psbt_get_address(
      port_,
      req,
    );
  }

  late final _wire_psbt_get_addressPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_GetAddressReq>)>>('wire_psbt_get_address');
  late final _wire_psbt_get_address = _wire_psbt_get_addressPtr.asFunction<void Function(int, ffi.Pointer<wire_GetAddressReq>)>();

  void wire_psbt_tx_builder_finish(
    int port_,
    ffi.Pointer<wire_TxBulderReq> req,
  ) {
    return _wire_psbt_tx_builder_finish(
      port_,
      req,
    );
  }

  late final _wire_psbt_tx_builder_finishPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_TxBulderReq>)>>('wire_psbt_tx_builder_finish');
  late final _wire_psbt_tx_builder_finish = _wire_psbt_tx_builder_finishPtr.asFunction<void Function(int, ffi.Pointer<wire_TxBulderReq>)>();

  void wire_psbt_wallet_get_address(
    int port_,
    ffi.Pointer<wire_PsbtWalletReq> wallet,
    ffi.Pointer<wire_AddressIndex> address_index,
  ) {
    return _wire_psbt_wallet_get_address(
      port_,
      wallet,
      address_index,
    );
  }

  late final _wire_psbt_wallet_get_addressPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_PsbtWalletReq>, ffi.Pointer<wire_AddressIndex>)>>('wire_psbt_wallet_get_address');
  late final _wire_psbt_wallet_get_address = _wire_psbt_wallet_get_addressPtr.asFunction<void Function(int, ffi.Pointer<wire_PsbtWalletReq>, ffi.Pointer<wire_AddressIndex>)>();

  void wire_psbt_wallet_internalized_address(
    int port_,
    ffi.Pointer<wire_PsbtWalletReq> wallet,
    ffi.Pointer<wire_AddressIndex> address_index,
  ) {
    return _wire_psbt_wallet_internalized_address(
      port_,
      wallet,
      address_index,
    );
  }

  late final _wire_psbt_wallet_internalized_addressPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_PsbtWalletReq>, ffi.Pointer<wire_AddressIndex>)>>('wire_psbt_wallet_internalized_address');
  late final _wire_psbt_wallet_internalized_address = _wire_psbt_wallet_internalized_addressPtr.asFunction<void Function(int, ffi.Pointer<wire_PsbtWalletReq>, ffi.Pointer<wire_AddressIndex>)>();

  void wire_psbt_wallet_sign(
    int port_,
    ffi.Pointer<wire_PsbtWalletReq> wallet,
    ffi.Pointer<wire_uint_8_list> psbt,
    bool is_multi_sig,
  ) {
    return _wire_psbt_wallet_sign(
      port_,
      wallet,
      psbt,
      is_multi_sig,
    );
  }
